Bug 108955 - FILESAVE: RTF: Background colour lost after roundtrip
Summary: FILESAVE: RTF: Background colour lost after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2017-07-04 19:21 UTC by Xisco Faulí
Modified: 2017-08-01 23:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-07-04 19:21:27 UTC
Steps:
1. Open attachment 60783 [details] from bug 49179
2. Save it as .RTF
3. Open it again

Observed behaviour: Yellow background is gone

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: cb37c5f0f3de7b545231a53d46a5271058af76ad
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-23_06:55:41
Locale: es-ES (es_ES); Calc: group
Comment 1 Xisco Faulí 2017-07-04 19:23:30 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 07:49:43 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 10:56:29 (GMT)
commit a9e029ace41562e28e9242d63230ad1ca275f5d3 (patch)
tree 605fee980e467c8a5896bdf5053fd7422865091a
parent c9c5c94771f22919ec82351b3b9b3096af96a508 (diff)
tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup
See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details on style override in RTF.

Here the problem was that we added an unneeded "reset to 0" property, the
opposite situation that commit 657c6cc3acec0528209a8584b838cd6de581c437
(tdf#104228 RTF import: fix override of style left/right para margin,
2016-12-13) was fixing (there a "reset to 0" was missing).

Bisected with bibisect-linux-64-5.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-07-18 07:02:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=138269391a9ac8cdc0c00b55e1fbc84a94c84a77

tdf#108955 RTF import: fix missing paragraph background

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-07-18 15:47:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b15de6b1e670b277b31f7fb579fc42a8ae5efbee&h=libreoffice-5-4

tdf#108955 RTF import: fix missing paragraph background

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-08-01 23:17:21 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 50799a721c7ddcf9475a1b79984ed64ddd7cdf57
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group