tdf#108955 RTF import: fix missing paragraph background

See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the context.

Here the problem was that details of the paragraph background were
removed during the style deduplication, but not the paragraph background
sprm itself. That was interpreted (correctly) by dmapper as "no
background", rather than "inherit from style".

Change-Id: I88904cbd0a3c7686ede1f98d06df8fc875978afc
Reviewed-on: https://gerrit.libreoffice.org/40099
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>